@@ -1,5 +1,15 @@
 2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* engines/mist/src/mist-style.c: (mist_style_draw_shadow):
+	- Just return for shadow_type == NONE. Fixes bug #366716 (John Cupitt)
+
+	* engines/mist/src/mist-style.c: (mist_style_draw_check):
+	- Use the passed in style instead of widget->style. Fixes a possible
+	  crasher.
+	- Clip the gc correctly.
+
+2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* engines/redmond/src/redmond_gtk2_drawing.c:
 	(redmond_draw_combobox_button), (redmond_draw_handle):
 	- Fix some broken parent accesses.
